# esp-adf

components/audio_board/: 0001-add-camera-and-audio.patch
components/audio_board/esp32_s3_korvo2_v3/: board.c  board_pins_config.c
components/esp_dispatcher/: esp_delegate.c
micropython_adf/boards/: CMakeLists.txt  component.mk
micropython_adf/boards/include/: audio_embed_tone.h  board_init.h
micropython_adf/boards/korvo2v3/: board_init.c  mpconfigboard.h  sdkconfig.korvo2v3
micropython_adf/mod/: audio_player.c  micropython.cmake  modcamera.h  modmd5.c  vfs_stream.c
tools/ci/: check_apps_json_and_sdkcfg.sh
